<!--
  ~ Copyright (c)  2020-2020, Marc Waugh
  ~
  ~ File:		strings.xml
  ~ Module:		Mobile Platform Development
  ~ Date:		2020
  ~ Student Id:	S1829721
  ~
  ~ Please note that this copyright header might appear on CC assets such as
  ~ SVG vector images/icons from 3rd parties. For files such as these their
  ~ respective copyright notices can be found inside /LICENSES.txt
  -->

<resources>
    <string name="app_name">MPD: Marc Waugh</string>

    <string name="title_roadworks">Roadworks</string>
    <string name="title_planned_roadworks">Planned Rw\'s</string>
    <string name="title_current_incidents">Current Incidents</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="toolbar_credits">Credits</string>
    <string name="toolbar_search">Search</string>

    <string name="student_id">S1829721</string>
    <string name="student_name">Marc Waugh</string>

    <string name="button_OpenMap">Open Map</string>
    <string name="title_activity_fragment_map">Map</string>
    <string name="apply_filter">Apply Text Filter</string>
    <string name="filter_by_title">Filter by Title</string>
    <string name="clear">Clear</string>
    <string name="filter_by_start_date">Filter by start date</string>
</resources>
