<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c)  2020-2020, Marc Waugh
  ~
  ~ File:		bottom_nav_menu.xml
  ~ Module:		Mobile Platform Development
  ~ Date:		2020
  ~ Student Id:	S1829721
  ~
  ~ Please note that this copyright header might appear on CC assets such as
  ~ SVG vector images/icons from 3rd parties. For files such as these their
  ~ respective copyright notices can be found inside /LICENSES.txt
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_roadworks"
        android:icon="@drawable/ic_svg_noun_under_construction"
        android:title="@string/title_roadworks" />

    <item
        android:id="@+id/navigation_current_incidents"
        android:icon="@drawable/ic_svg_noun_road"
        android:title="@string/title_current_incidents" />

    <item
        android:id="@+id/navigation_planned_roadworks"
        android:icon="@drawable/ic_svg_noun_calendar"
        android:title="@string/title_planned_roadworks" />

</menu>
