<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c)  2020-2020, Marc Waugh
  ~
  ~ File:		activity_main.xml
  ~ Module:		Mobile Platform Development
  ~ Date:		2020
  ~ Student Id:	S1829721
  ~
  ~ Please note that this copyright header might appear on CC assets such as
  ~ SVG vector images/icons from 3rd parties. For files such as these their
  ~ respective copyright notices can be found inside /LICENSES.txt
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:animateLayoutChanges="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/act_main_csl1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryDark"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/txt_student_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"

            app:layout_constraintTop_toTopOf="@id/act_main_csl1"
            app:layout_constraintLeft_toLeftOf="@id/act_main_csl1"

            android:textColor="@color/colorWhite"
            android:text="@string/student_id" />

        <TextView
            android:id="@+id/txt_landscape_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"

            app:layout_constraintTop_toTopOf="@id/act_main_csl1"
            app:layout_constraintLeft_toLeftOf="@id/act_main_csl1"
            app:layout_constraintRight_toRightOf="@id/act_main_csl1"

            android:textColor="@color/colorWhite"
            android:text="PORTRAIT" />


        <TextView
            android:id="@+id/txt_student_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"

            android:paddingLeft="10dp"
            android:paddingRight="10dp"

            app:layout_constraintTop_toTopOf="@id/act_main_csl1"
            app:layout_constraintRight_toRightOf="@id/act_main_csl1"

            android:textColor="@color/colorWhite"
            android:text="@string/student_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_ma_MapToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginRight="60dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/tb_mainactivity"

        android:background="?attr/colorPrimary"
        android:src="@drawable/ic_map_white_64dp"
        android:scaleType="center"
        app:maxImageSize="32dp"

        android:clickable="true"
        android:contentDescription="@string/button_OpenMap"
        android:elevation="8dp"
        app:borderWidth="0dp"
        app:rippleColor="@color/colorWhite" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_mainactivity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintTop_toBottomOf="@+id/act_main_csl1"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:layout_editor_absoluteX="0dp" />

    <FrameLayout
        android:id="@+id/frag_mainactivity"
        android:layout_width="match_parent"

        android:layout_height="0px"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"

        app:layout_constraintTop_toBottomOf="@id/tb_mainactivity"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/nav_view_mainactivity"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view_mainactivity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:visibility="visible"
        app:elevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>